<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gopal.touring.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:scaleType="centerCrop"
            android:src="@drawable/home_kolkata_image" />

        <TextView
            style="@style/text_header"
            android:layout_marginTop="10dp"
            android:text="@string/city_overview_header" />

        <TextView
            style="@style/header_info"
            android:text="@string/city_overview_description" />

        <TextView
            style="@style/text_header"
            android:text="@string/language_header" />

        <TextView
            style="@style/header_info"
            android:text="@string/languages" />

        <TextView
            style="@style/text_header"
            android:text="@string/visit_time_header" />

        <TextView
            style="@style/header_info"
            android:text="@string/visit_time" />

        <TextView
            style="@style/text_header"
            android:text="@string/popular_festive_header" />

        <TextView
            style="@style/header_info"
            android:text="@string/popular_festive" />
    </LinearLayout>
</ScrollView>
