<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gopal.touring.HowToReachActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Make a collage of rail,bus,airport -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:scaleType="centerCrop"
            android:src="@drawable/collage_image" />

        <TextView
            style="@style/header_info"
            android:layout_marginTop="5dp"
            android:text="@string/summary" />

        <TextView
            style="@style/text_header"
            android:text="@string/travel_option" />

        <TextView
            style="@style/text_header"
            android:text="@string/by_air_header" />

        <TextView
            style="@style/header_info"
            android:text="@string/by_air" />

        <TextView
            style="@style/text_header"
            android:text="@string/by_train_header" />

        <TextView
            style="@style/header_info"
            android:text="@string/by_train" />

        <TextView
            style="@style/text_header"
            android:text="@string/by_self_drive_header" />

        <TextView
            style="@style/header_info"
            android:text="@string/by_road_or_self_drive" />

    </LinearLayout>

</ScrollView>
